production/common/js/bower/requirejs/tests/error/plug.js
define({load:function(e,r,o){"use strict";if("broken"===e){var n=Error("broken");n.plugMessage=e,o.error(n)}else o(e)}});